# python-focus-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.spec  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci.yml.disabled
docs/: GITHUB_PLAYBOOK.md  PROJECT_CONTEXT.md  Projekt_01_FocusForge_BLUEPRINT.md  TUTOR_HANDOFF.md
src/focus_forge/: __init__.py  main.py  timer.py
tests/: __init__.py  test_timer.py
